--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.0.0",
     "rbx": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
